--- a/www/views/home.html
+++ b/www/views/home.html
@@ -1,9 +1,9 @@
 <div class="home">
   <ion-content scroll="false">
-    <div class="home-text row-50">
+    <div class="home-text-logo row-50">
       <img src="img/img-logo-white.png"></img>
     </div>
-    <div class="home-text row-50">
+    <div class="home-text-buttons row-50">
       <button class="button button-clear button-light" nav-direction="forward" ui-sref="earlybird.login">
         Sign In
       </button>
