--- a/www/views/partials/add-card.html
+++ b/www/views/partials/add-card.html
@@ -8,27 +8,27 @@
   <ion-content scroll="false">
     <form name="newCard.form" class="list">
       <label class="item item-input">
-        <input type="text" required ng-model="newCard.params.title" placeholder="Payment nickname">
+        <input type="text" reset-field required ng-model="newCard.params.title" placeholder="Payment nickname">
       </label>
 
       <label class="item item-input">
-        <input type="tel" size="16" required ng-model="newCard.params.number" placeholder="Number">
+        <input type="tel" size="16" reset-field required ng-model="newCard.params.number" placeholder="Number">
       </label>
 
       <label class="item item-input">
-        <input type="tel" required ng-model="newCard.params.cvv" placeholder="CVV">
+        <input type="tel" reset-field required ng-model="newCard.params.cvv" placeholder="CVV">
       </label>
 
       <label class="item item-input">
-        <input type="tel" size="2" required ng-model="newCard.params.exp_month" placeholder="MM">
+        <input type="tel" size="2" reset-field required ng-model="newCard.params.exp_month" placeholder="MM">
       </label>
 
       <label class="item item-input">
-        <input type="tel" size="4" required ng-model="newCard.params.exp_year" placeholder="YYYY">
+        <input type="tel" size="4" reset-field required ng-model="newCard.params.exp_year" placeholder="YYYY">
       </label>
 
       <label class="item item-input">
-        <input type="tel" required ng-model="newCard.params.zip" placeholder="Zip">
+        <input type="tel" reset-field required ng-model="newCard.params.zip" placeholder="Zip">
       </label>
     </form>
   </ion-content>
