--- a/www/views/login.html
+++ b/www/views/login.html
@@ -8,10 +8,10 @@
   <ion-content scroll="false">
     <form name="loginForm.form" class="list list-inset">
       <label class="item item-fixed item-input">
-        <input type="text" required ng-model="loginForm.params.email" placeholder="email">
+        <input type="text" required reset-field ng-model="loginForm.params.email" placeholder="email">
       </label>
       <label class="item item-fixed item-input">
-        <input type="password" required ng-model="loginForm.params.password" placeholder="password">
+        <input type="password" required reset-field ng-model="loginForm.params.password" placeholder="password">
       </label>
     </form>
   </ion-content>
