--- a/www/views/partials/add-address.html
+++ b/www/views/partials/add-address.html
@@ -8,23 +8,23 @@
   <ion-content scroll="false">
     <form name="newAddress.form" class="list">
       <label class="item item-input">
-        <input type="text" required ng-model="newAddress.title" placeholder="Address nickname">
+        <input type="text" reset-field required ng-model="newAddress.title" placeholder="Address nickname">
       </label>
 
       <label class="item item-input">
-        <input type="text" required ng-model="newAddress.street1" placeholder="Street">
+        <input type="text" reset-field required ng-model="newAddress.street1" placeholder="Street">
       </label>
 
       <label class="item item-input">
-        <input type="text" required ng-model="newAddress.city" placeholder="City">
+        <input type="text" reset-field required ng-model="newAddress.city" placeholder="City">
       </label>
 
       <label class="item item-input">
-        <input type="text" required ng-model="newAddress.state" placeholder="State">
+        <input type="text" reset-field required ng-model="newAddress.state" placeholder="State">
       </label>
 
       <label class="item item-input">
-        <input type="text" required ng-model="newAddress.zip" placeholder="Zip">
+        <input type="text" reset-field required ng-model="newAddress.zip" placeholder="Zip">
       </label>
     </form>
   </ion-content>
