--- a/www/views/register.html
+++ b/www/views/register.html
@@ -8,22 +8,22 @@
   <ion-content scroll="false">
     <form name="registerForm.form" class="list list-inset">
       <label class="item item-fixed item-input">
-        <input type="text" required ng-model="registerForm.params.first_name" placeholder="first name">
+        <input type="text" reset-field required ng-model="registerForm.params.first_name" placeholder="first name">
       </label>
       <label class="item item-fixed item-input">
-        <input type="text" required ng-model="registerForm.params.last_name" placeholder="last name">
+        <input type="text" reset-field required ng-model="registerForm.params.last_name" placeholder="last name">
       </label>
       <label class="item item-fixed item-input">
-        <input type="text" required ng-model="registerForm.params.email" placeholder="email">
+        <input type="text" reset-field required ng-model="registerForm.params.email" placeholder="email">
       </label>
       <label class="item item-fixed item-input">
-        <input type="text" required ng-model="registerForm.params.phone" placeholder="phone number">
+        <input type="text" reset-field required ng-model="registerForm.params.phone" placeholder="phone number">
       </label>
       <label class="item item-fixed item-input">
-        <input type="password" required ng-model="registerForm.params.password" placeholder="password">
+        <input type="password" reset-field required ng-model="registerForm.params.password" placeholder="password">
       </label>
       <label class="item item-fixed item-input">
-        <input type="text" ng-model="registerForm.params.code" placeholder="promo code">
+        <input type="text" reset-field ng-model="registerForm.params.code" placeholder="promo code">
       </label>
     </form>
   </ion-content>
