--- a/www/views/order.html
+++ b/www/views/order.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="item item-description">
-          <h2>{{item.title}} - ${{item.price}}</h2>
+          <h2>{{item.title}} - ${{item.price | number:0}}</h2>
           <p>{{item.description}}</p>
         </div>
 
