--- a/www/views/register.html
+++ b/www/views/register.html
@@ -14,7 +14,7 @@
         <input type="text" reset-field required ng-model="registerForm.params.last_name" placeholder="last name">
       </label>
       <label class="item item-fixed item-input">
-        <input type="text" reset-field required ng-model="registerForm.params.email" placeholder="email">
+        <input type="email" reset-field required ng-model="registerForm.params.email" placeholder="email">
       </label>
       <label class="item item-fixed item-input">
         <input type="text" reset-field required ng-model="registerForm.params.phone" placeholder="phone number">
