feat(addressed): added notest section

--- a/www/views/partials/add-address.html
+++ b/www/views/partials/add-address.html
@@ -26,6 +26,10 @@
       <label class="item item-input">
         <input type="tel" reset-field required ng-model="newAddress.zip" placeholder="Zip">
       </label>
+
+      <label class="item item-input">
+        <textarea reset-field ng-model="newAddress.notes" placeholder="Notes (optional)">
+      </label>
     </form>
   </ion-content>
 </ion-modal-view>
