--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -18,6 +18,13 @@ $dark:                            #444 !default;
 $assertive: #E15726 !default;
 $balanced: #30c83e !default;
 
+$modal-inset-mode-break-point:    200px !default;  // @media min-width
+$modal-inset-mode-top:            10% !default;
+$modal-inset-mode-right:          10% !default;
+$modal-inset-mode-bottom:         20% !default;
+$modal-inset-mode-left:           10% !default;
+$modal-inset-mode-min-height:     0px !default;
+
 // The path for our ionicons font files, relative to the built CSS in www/css
 
 $ionicons-font-path: "../lib/ionic/fonts" !default;
