feat(app): convert ng-click to on-touch

--- a/www/views/order.html
+++ b/www/views/order.html
@@ -20,11 +20,11 @@
         </div>
 
         <div class="order-quantity item item-fixed item-input">
-          <button ng-click="decQuantity(item)" ng-disabled="!item.quantity>0" class="button button-small button-icon icon ion-ios-minus-outline"></button>
+          <button on-touch="decQuantity(item)" ng-disabled="!item.quantity>0" class="button button-small button-icon icon ion-ios-minus-outline"></button>
           <div class="item-label-center">
             Quantity: {{item.quantity || 0}}
           </div>
-          <button ng-click="incQuantity(item)" class="button button-icon icon ion-ios-plus-outline"></button>
+          <button on-touch="incQuantity(item)" class="button button-icon icon ion-ios-plus-outline"></button>
         </div>
       </div>
 
@@ -45,7 +45,7 @@
         <div>
           Add Address
         </div>
-        <button ng-click="addressModal.show()" class="button button-icon icon ion-ios-plus-outline"></button>
+        <button on-touch="addressModal.show()" class="button button-icon icon ion-ios-plus-outline"></button>
       </div>
 
       <div class="item item-divider">
@@ -67,12 +67,12 @@
         <div>
           Add Payment
         </div>
-        <button ng-click="cardModal.show()" class="button button-icon icon ion-ios-plus-outline"></button>
+        <button on-touch="cardModal.show()" class="button button-icon icon ion-ios-plus-outline"></button>
       </div>
     </form>
 
     <div class="list list-inset">
-      <button ng-show="availability.now()" ng-disabled="!orderValid(order)" class="order-button button button-block button-balanced" ng-click="createOrder(order)">Place Order: ${{orderTotal(items)}}</button>
+      <button ng-show="availability.now()" ng-disabled="!orderValid(order)" class="order-button button button-block button-balanced" on-touch="createOrder(order)">Place Order: ${{orderTotal(items)}}</button>
       <button ng-hide="availability.now()" ng-disabled="true" class="button button-block button-balanced">We're closed until {{availability.next_open.start_time | date : 'EEEE @ H:mm a'}}</button>
     </div>
   </ion-content>
