--- a/www/views/sharing.html
+++ b/www/views/sharing.html
@@ -15,31 +15,31 @@
     </div>
 
     <div class="list row-50 sharing-buttons">
-      <label ng-click="" class="item item-icon-left item-icon-right">
+      <label on-touch="" class="item item-icon-left item-icon-right">
         <i class="icon ion-ios-chatbubble"></i>
         Text Message
         <i class="icon ion-ios-arrow-forward"></i>
       </label>
 
-      <label ng-click="" class="item item-icon-left item-icon-right">
+      <label on-touch="" class="item item-icon-left item-icon-right">
         <i class="icon ion-ios-email"></i>
         Email
         <i class="icon ion-ios-arrow-forward"></i>
       </label>
 
-      <label ng-click="" class="item item-icon-left item-icon-right">
+      <label on-touch="" class="item item-icon-left item-icon-right">
         <i class="icon ion-social-facebook"></i>
         Facebook
         <i class="icon ion-ios-arrow-forward"></i>
       </label>
 
-      <label ng-click="" class="item item-icon-left item-icon-right">
+      <label on-touch="" class="item item-icon-left item-icon-right">
         <i class="icon ion-social-twitter"></i>
         Twitter
         <i class="icon ion-ios-arrow-forward"></i>
       </label>
 
-      <label ng-click="" class="item item-icon-left item-icon-right">
+      <label on-touch="" class="item item-icon-left item-icon-right">
         <i class="icon ion-ios-copy"></i>
         Copy
         <i class="icon ion-ios-arrow-forward"></i>
