feat(keyboard): focus on input

--- a/www/views/login.html
+++ b/www/views/login.html
@@ -7,7 +7,7 @@
 
   <ion-content scroll="false">
     <form name="loginForm.form" class="list list-inset">
-      <label class="item item-fixed item-input">
+      <label focus-me class="item item-fixed item-input">
         <input type="email" required reset-field ng-model="loginForm.params.email" placeholder="Email">
       </label>
       <label class="item item-fixed item-input">
