--- a/www/views/register.html
+++ b/www/views/register.html
@@ -7,7 +7,7 @@
 
   <ion-content scroll="false">
     <form name="registerForm.form" class="list list-inset">
-      <label class="item item-fixed item-input">
+      <label focus-me class="item item-fixed item-input">
         <input type="text" reset-field required ng-model="registerForm.params.first_name" placeholder="First name">
       </label>
       <label class="item item-fixed item-input">
