feat(app): pull data on app resume

--- a/www/views/home.html
+++ b/www/views/home.html
@@ -1,15 +1,23 @@
 <div class="home">
   <ion-content scroll="false">
+
     <div class="home-text-logo row-67">
       <img src="img/img-logo-white.png"></img>
     </div>
+
     <div class="home-text-buttons row-33">
-      <button class="button button-clear button-light" nav-direction="forward" ui-sref="earlybird.login">
+      <button class="button button-clear button-light"
+              nav-direction="forward"
+              ui-sref="earlybird.login">
         Sign In
       </button>
-      <button class="button button-light" nav-direction="forward" ui-sref="earlybird.register">
+
+      <button class="button button-light"
+              nav-direction="forward"
+              ui-sref="earlybird.register">
         Sign Up
       </button>
     </div>
+
   </ion-content>
 </div>
