chore(codes): converted promo_codes to codes

--- a/www/views/settings.html
+++ b/www/views/settings.html
@@ -82,7 +82,7 @@
           <button class="button button-assertive button-small" on-touch="redeemPromo(inputs.code)">Apply</button>
         </div>
 
-        <div ng-show="currentUser.promo_codes" class="item item-fixed item-icon-left">
+        <div ng-show="currentUser.codes" class="item item-fixed item-icon-left">
           <i class="icon icon-image">
             <img ng-src="img/ic-promocode2x.png"></img>
           </i>
