--- a/www/views/order.html
+++ b/www/views/order.html
@@ -73,7 +73,11 @@
 
     <div class="list list-inset">
       <button ng-show="availability.now()" ng-disabled="!orderValid(order)" class="order-button button button-block button-balanced" on-touch="createOrder(order)">Place Order: ${{orderTotal(items)}}</button>
-      <button ng-hide="availability.now()" ng-disabled="true" class="button button-block button-balanced">We're closed until {{availability.next_open.start_time | date : 'EEEE @ H:mm a'}}</button>
+      <button ng-hide="availability.now()" ng-disabled="true" class="button button-block button-balanced">We're closed until {{availability.next_open.start_time | date : 'EEEE @ h:mm a'}}</button>
     </div>
   </ion-content>
+
+  <ion-footer-bar ng-show="orderInProgress">
+    <h1 class="title">Order in progress!</h1>
+  </ion-footer-bar>
 </div>
