--- a/www/views/partials/add-address.html
+++ b/www/views/partials/add-address.html
@@ -5,7 +5,7 @@
     <button ng-disabled="newAddress.form.$invalid" class="button button-clear" on-touch="createAddress(newAddress)">Add</button>
   </ion-header-bar>
 
-  <ion-content scroll="false">
+  <ion-content>
     <form name="newAddress.form" class="list">
       <label class="item item-input">
         <input type="text" reset-field required ng-model="newAddress.title" placeholder="Address nickname">
